--- a/assets/css/com.css
+++ b/assets/css/com.css
@@ -231,7 +231,7 @@ tr {
       margin-bottom: 10px; 
       padding: 22px 44px; border-color:#000000; border-width: 0px; 
       border-radius: 6px; 
-      background: linear-gradient(to bottom, #FF0000 0%, #FFE535 100%); 
+      background: linear-gradient(to bottom, #FF0000 0%, #000000 100%); 
       box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.5); 
       text-decoration: none!important;
     }
